--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                         <h2>Fennec Release <small class="text-muted">60.0.1 build1</small></h2>
     <div class="progress" style="height: 30px;">
         <div class="progress-bar bg-primary" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Release kicked off</div>
-          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Upload builds</div>
-          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Publish on Google Play</div>
+          <div class="progress-bar bg-primary" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Uploaded builds</div>
+          <div class="progress-bar bg-primary" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Published on Google Play</div>
       </div>
           
           </div>
