--- a/index.html
+++ b/index.html
@@ -18,14 +18,20 @@
       </div>
       <!-- release -->
       <div class="pt-3 pb-3">
-                <h2>Desktop Firefox Quantum <small class="text-muted"> no release in-flight</small></h2>
-        <div class="progress" style="height: 40px;"></div>
+                                      <h2>Firefox Quantum <small class="text-muted">61.0.2 build1</small></h2>
+    <div class="progress" style="height: 30px;">
+      <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div>
+      <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Upload builds</div>
+      <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Push to mirrors</div>
+      <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">QE sign off</div>
+      <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Publish live</div>
+    </div>          
               </div>
       <!-- -->
 
       <!-- beta -->
       <div class="pt-3 pb-3">
-                                <h2>Firefox Beta <small class="text-muted">62.0b15 build2</small></h2>
+                                <h2>Firefox Beta <small class="text-muted">62.0b14 build1</small></h2>
     <div class="progress" style="height: 30px;">
         <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div>
           <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Uploaded builds</div>
@@ -38,7 +44,7 @@
 
       <!-- devedition -->
       <div class="pt-3 pb-3">
-                                <h2>Firefox Devedition <small class="text-muted">62.0b15 build1</small></h2>
+                                <h2>Firefox Devedition <small class="text-muted">62.0b14 build1</small></h2>
     <div class="progress" style="height: 30px;">
         <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div>
           <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Uploaded builds</div>
