--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 
       <!-- devedition -->
       <div class="pt-3 pb-3">
-                                <h2>Firefox Devedition <small class="text-muted">62.0b19 build1</small></h2>
+                                <h2>Firefox Devedition <small class="text-muted">62.0b20 build1</small></h2>
     <div class="progress" style="height: 30px;">
         <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div>
-          <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Uploaded builds</div>
-          <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Pushed to mirrors</div>
-          <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">QE signed off</div>
-          <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Published live</div>
+          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Upload builds</div>
+          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Push to mirrors</div>
+          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">QE sign off</div>
+          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Publish live</div>
       </div>
             
               </div>
