--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                                 <h2>Firefox Beta <small class="text-muted">63.0b3 build1</small></h2>
     <div class="progress" style="height: 30px;">
         <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Release kicked off</div>
-          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Upload builds</div>
-          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Push to mirrors</div>
-          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">QE sign off</div>
-          <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Publish live</div>
+          <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Uploaded builds</div>
+          <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Pushed to mirrors</div>
+          <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">QE signed off</div>
+          <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Published live</div>
       </div>        
               </div>
       <!-- -->
