--- a/index.html
+++ b/index.html
@@ -64,8 +64,14 @@
 
     <!-- beta -->
     <div class="pt-3 pb-3">
-            <h2>Mobile Fennec Beta <small class="text-muted">no release in-flight</small></h2>
-      <div class="progress" style="height: 40px;"></div>
+                        <h2>Fennec Beta <small class="text-muted">64.0b12 build1</small></h2>
+    <div class="progress" style="height: 30px;">
+      <div class="progress-bar bg-primary" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Release kicked off</div>
+      <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 25%" aria-valuenow="225" aria-valuemin="0" aria-valuemax="100">Upload builds</div>
+      <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">QE sign off</div>
+      <div class="progress-bar bg-white text-muted" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Publish on Google Play</div>
+    </div>
+          
           </div>
     <!-- -->
   </div>
